・html、ボタンまとめ ・blazorでボタンでnavilinkする方法(引数つき) ・dotnet run でのswagger起動 ・where if

--- a/C#_Brazor/TekitouCRUD/TekitouCRUD/Client/Pages/UserManager/AddUser.razor
+++ b/C#_Brazor/TekitouCRUD/TekitouCRUD/Client/Pages/UserManager/AddUser.razor
@@ -1,8 +1,8 @@
 @page "/user/add"
 @page "/user/edit/{userId:int}"
 @using TekitouCRUD.Shared.Entities;
-@inject HttpClient Http
-@inject NavigationManager NavigationManager
+@inject HttpClient Http;
+@inject NavigationManager NavigationManager;
 
 
 <h1>@Title User</h1>
