--- a/C#_Brazor/TekitouCRUD/TekitouCRUD/Client/Pages/UserManager/UserDetails.razor
+++ b/C#_Brazor/TekitouCRUD/TekitouCRUD/Client/Pages/UserManager/UserDetails.razor
@@ -1,7 +1,7 @@
 @page "/fetchuserdetails"
 @using TekitouCRUD.Shared.Entities;
 @inject HttpClient Http;
-
+@inject NavigationManager NavigationManager;
 
 <h1>User Data</h1>
 <p>Blazor CRUD operation</p>
@@ -13,8 +13,8 @@
         </a>
     </div>
     <div class="input-group col">
-        <input type="text" class="form-control" placeholder="Search user by name"
-                @bind="SearchString" @bind:event="oninput" @onkeyup="FilterUser" />
+        <input type="text" class="form-control" placeholder="Search user by name" @bind="SearchString"
+            @bind:event="oninput" @onkeyup="FilterUser" />
         @if (SearchString.Length > 0)
         {
             <div class="input-group-append">
@@ -44,24 +44,25 @@ else
             </tr>
         </thead>
         <tbody>
-        @foreach (var user in userList)
-        {
-            <tr>
-                <td>@user.UserId</td>
-                <td>@user.UserName</td>
-                <td>@user.Address</td>
-                <td>@user.CellNumber</td>
-                <td>@user.EmailId</td>
-                <td>
-                    <a href='/user/edit/@user.UserId' class="btn btn-secondary" role="button">
-                        Edit
-                    </a>
-                    <a href='/user/delete/@user.UserId' class="btn btn-danger" role="button">
-                        Delete
-                    </a>
-                </td>
-            </tr>
-        }
+            @foreach (var user in userList)
+            {
+                <tr>
+                    <td>@user.UserId</td>
+                    <td>@user.UserName</td>
+                    <td>@user.Address</td>
+                    <td>@user.CellNumber</td>
+                    <td>@user.EmailId</td>
+                    <td>
+                        <a href='/user/edit/@user.UserId' class="btn btn-secondary" role="button"> Edit </a>
+                        <button type="button" class="btn btn-secondary"
+                            @onclick="@(() => NavigationManager.NavigateTo($"/user/edit/{@user.UserId}"))"> Edit </button>
+                        <button type="button" class="btn btn-secondary"
+                            @onclick="@(() => ShowEditPage(user.UserId))"> Edit </button>
+                        <input type="submit" value="Cancel" @onclick="@(() => NavigationManager.NavigateTo($"/user/edit/{@user.UserId}"))" class="btn btn-warning" />
+                        <a href='/user/delete/@user.UserId' class="btn btn-danger" role="button"> Delete </a>
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
 }
@@ -101,5 +102,10 @@ else
     {
         SearchString = string.Empty;
         userList = searchUserData;
+    }
+
+    void ShowEditPage(int userID)
+    {
+        NavigationManager.NavigateTo($"/user/edit/{userID}");
     }
 }
