--- a/C#_WPF/MVVM_DI/Sample/MultiContainerSample/ToolkitFugaProject/Views/MainWindow.xaml
+++ b/C#_WPF/MVVM_DI/Sample/MultiContainerSample/ToolkitFugaProject/Views/MainWindow.xaml
@@ -43,7 +43,7 @@
             <Button
                 Width="100"
                 Margin="0,10,0,0"
-                Command="{Binding ShowFugaCommand}"
+                Command="{Binding FugaViewModel.ShowFugaCommand}"
                 Content="ShowFuga" />
         </StackPanel>
     </Grid>
